# cpp

./: README.md
MyBigBlackSnake/source/: #main.cpp#  classes.cpp  classes.h  main.cpp
geekbrains/oop/lesson1/source/: source.cpp
quarter_one/last_lesson/build-last_lesson-Desktop-Debug/: CMakeCache.txt.prev  Makefile  SDL2Test  cmake_install.cmake
quarter_one/last_lesson/build-last_lesson-Desktop-Release/: CMakeCache.txt  Makefile  SDL2Test  cmake_install.cmake  qtcsettings.cmake
quarter_one/last_lesson/last_lesson/: CMakeLists.txt  colour.cpp  colour.h  game.cpp  game.h  human.h  ii.cpp  ii.h  main.cpp  sdl2.cpp  sdl2.h
quarter_one/lesson_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  first_prog  main.cpp
quarter_one/lesson_2/build-lesson_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson_2
quarter_one/lesson_2/lesson_2/: CMakeLists.txt  main.cpp
quarter_one/lesson_3/build-lesson3-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson3
quarter_one/lesson_3/lesson3/: CMakeLists.txt  main.cpp
quarter_one/lesson_4/build-lesson4-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson4
quarter_one/lesson_4/lesson4/: CMakeLists.txt  main.cpp
quarter_one/lesson_5/build-lesson5-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lesson5  qtcsettings.cmake
quarter_one/lesson_5/lesson5/: CMakeLists.txt  main.cpp
quarter_one/lesson_6/lesson6/: CMakeLists.txt  main.cpp
quarter_one/lesson_7/lesson7/: CMakeLists.txt  co_worker.cpp  co_worker.h  main.cpp  mylib.cpp  mylib.h
(+56 files in other folders)
